Fix menu color gap

--- a/themes/vitormargis/source/css/style.less
+++ b/themes/vitormargis/source/css/style.less
@@ -150,7 +150,7 @@ nav.page-main-navigation {
   top: 340px;
   z-index: 102;
   width: 162px;
-  background: rgba(255, 255, 255, 0.8);
+  background: rgba(255, 255, 255, 0.6);
   border-radius: 0px 0px 3px 0px;
 }
 
